[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/ball.png" type="Texture" id=1]
[ext_resource path="res://Ball.gd" type="Script" id=2]
[ext_resource path="res://sounds/Hit_hurt 14 (1).wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/Hit_hurt 14.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/Explosion 10.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/Hit_hurt 32.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/Hit_hurt 32 (2).wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/Hit_hurt 32 (1).wav" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.9

[sub_resource type="CircleShape2D" id=2]
radius = 12.0416

[node name="Ball" type="RigidBody2D"]
collision_layer = 8
collision_mask = 13
mass = 0.1
physics_material_override = SubResource( 1 )
contacts_reported = 5
contact_monitor = true
sleeping = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HitEffectTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HitNormal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 3.769
bus = "Fx"

[node name="HitFast" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 2.811
bus = "Fx"

[node name="Score" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.589
bus = "Fx"

[node name="Bounce1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Fx"

[node name="Bounce2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "Fx"

[node name="Bounce3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Fx"

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
